# tls_client

./: .gitignore  README.MD  setup.cfg
src/tls_client/: __main__.py
src/tls_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tls_client/config/: config.yaml
src/tls_client/lib/: client.py  keylogger.py  main.py  session_storage.py
tests/: __init__.py
