[metadata]
name = tls_client
version = 0.0.1
license = MIT
description = TLS client, but not that good
author = mlddlb
author_email = mlddlb@yandex-team.ru

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pyOpenSSL
   pyyaml

[options.packages.find]
where=src